--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -118,6 +118,7 @@
     </script>
 
     <!-- create the backbone app -->
+    <script data-main="app" src="static/js/lib/require.js"></script>
     <script src="/static/js/routers/router.js"></script>
     <script src="/static/js/models/tab.js"></script>
     <script src="/static/js/collections/tabs.js"></script>
