Commit of refactored working AMD version of marstime SPA

--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -90,22 +90,11 @@
     </script>
     <!-- Backbone Templates -->
 
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/static/bootstrap/js/ie10-viewport-bug-workaround.js"></script>
-
-    <!-- backbone dependencies -->
-    <!-- <script src="/static/js/lib/underscore-min.js"></script> 
-        <script src="/static/js/lib/underscore-min.map"></script>
-        <script src="/static/js/lib/backbone-min.js"></script>
-        <script src="/static/js/lib/backbone-min.map"></script>-->
-    <script src="/static/js/lib/underscore.js"></script>
-    <script src="/static/js/lib/backbone.js"></script>
 
     <!-- bootstrapped data for intialization of Backbone tabs collection -->
     <script>
@@ -118,15 +107,7 @@
     </script>
 
     <!-- create the backbone app -->
-    <script data-main="app" src="static/js/lib/require.js"></script>
-    <script src="/static/js/routers/router.js"></script>
-    <script src="/static/js/models/tab.js"></script>
-    <script src="/static/js/collections/tabs.js"></script>
-    <script src="/static/js/views/tab.js"></script>
-    <script src="/static/js/views/article.js"></script>
-    <script src="/static/js/views/app.js"></script>
-    <script src="/static/js/app.js"></script>
-    <!--<script src="/static/js/app_complete.js"></script>-->
+    <script data-main="static/js/main" src="static/js/lib/require.js"></script>
 
   </body>
 </html>
