Changed image url for areogator.gif from local to Photobucket url.

--- a/app/templates/calendar_areogator_backbone.html
+++ b/app/templates/calendar_areogator_backbone.html
@@ -4,7 +4,7 @@
     <h4>You don't need a sixth sense to determine where Mars is at any given time - just six cents, if you use the areogator.</h4>
     
     <div class="thumbnail">
-        <img src="/static/images/marstime/areogator.gif" class="img-responsive">
+        <img src="http://i920.photobucket.com/albums/ad46/jkeauctions/marstime/areogator_zpsirbhlo04.gif" class="img-responsive">
     </div>
 
     <P><BR>Lets say you want to know the position of Mars during a given year, 1993 
