Updated with open graph tags and google search terms

--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -4,10 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="A Martian Calendar designed by Dr. Robert Zubrin.">
+    <meta name="keywords" content="Mars,Zubrin,Calendar,Mars Society,Space,NASA">
+    <meta name="author" content="Jeff Roche">
 
     <title>A Calendar for Mars</title>
+
+    <!-- open graph tags -->
+    <meta property="og:title" content="A Calendar For Mars" />
+    <meta property="og:site_name" content="ACalendarForMars.com"/>
+     <meta property="fb:app_id" content="966698506728292"/>
+    <meta property="og:type" content="article"/>
+    <meta property="article:author" content="https://www.facebook.com/robert.zubrin.1" />
+    <meta property="article:publisher" content="https://www.facebook.com/NSS" />
+    <meta property="og:image" content="http://i920.photobucket.com/albums/ad46/jkeauctions/a-Mission-to-Mars-Pic-06_zps5cfsl7wa.jpg"/>
+    <meta property="og:description" content="Mars needs a calendar - using Earth dates just won't do. If I tell you it is February 1, you know that it is freezing in Minneapolis and high summer in Sydney, but what does it tell you about conditions on Mars? The idea of a Martian calendar and timekeeping system is not original, and many have been designed in the past. Edgar Rice Burroughs developed an intricate calendar system for his Barsoomian civilization. But the problem with Burrough's, and all the successor Martian time systems that I have seen, is that they are not physical - they bear no relation to the Martian seasons or to the timekeeping needs of Mars surface navigation."/>
+    <meta property="og:url" content="http://www.acalendarformars.com/"/>
+    <!-- end open graph tags -->
 
     <!-- Bootstrap core CSS -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
