Updated with twitter card tags

--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -10,7 +10,7 @@
 
     <title>A Calendar for Mars</title>
 
-    <!-- open graph tags -->
+    <!-- open graph tags facebook-->
     <meta property="og:title" content="A Calendar For Mars" />
     <meta property="og:site_name" content="ACalendarForMars.com"/>
      <meta property="fb:app_id" content="966698506728292"/>
@@ -21,6 +21,14 @@
     <meta property="og:description" content="Mars needs a calendar - using Earth dates just won't do. If I tell you it is February 1, you know that it is freezing in Minneapolis and high summer in Sydney, but what does it tell you about conditions on Mars? The idea of a Martian calendar and timekeeping system is not original, and many have been designed in the past. Edgar Rice Burroughs developed an intricate calendar system for his Barsoomian civilization. But the problem with Burrough's, and all the successor Martian time systems that I have seen, is that they are not physical - they bear no relation to the Martian seasons or to the timekeeping needs of Mars surface navigation."/>
     <meta property="og:url" content="http://www.acalendarformars.com/"/>
     <!-- end open graph tags -->
+
+    <!-- twitter card tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@pokeyjoey">
+    <meta name="twitter:title" content="A Calendar for Mars">
+    <meta name="twitter:description" content="Mars needs a calendar - using Earth dates just won't do. If I tell you it is February 1, you know that it is freezing in Minneapolis and high summer in Sydney, but what does it tell you about conditions on Mars?">
+    <meta name="twitter:image" content="http://i920.photobucket.com/albums/ad46/jkeauctions/a-Mission-to-Mars-Pic-06_zps5cfsl7wa.jpg">
+    <!-- end twitter card tags -->
 
     <!-- Bootstrap core CSS -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
