Updated facebook description tags

--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -18,7 +18,7 @@
     <meta property="article:author" content="https://www.facebook.com/robert.zubrin.1" />
     <meta property="article:publisher" content="https://www.facebook.com/NSS" />
     <meta property="og:image" content="http://i920.photobucket.com/albums/ad46/jkeauctions/a-Mission-to-Mars-Pic-06_zps5cfsl7wa.jpg"/>
-    <meta property="og:description" content="Mars needs a calendar - using Earth dates just won't do. If I tell you it is February 1, you know that it is freezing in Minneapolis and high summer in Sydney, but what does it tell you about conditions on Mars? The idea of a Martian calendar and timekeeping system is not original, and many have been designed in the past. Edgar Rice Burroughs developed an intricate calendar system for his Barsoomian civilization. But the problem with Burrough's, and all the successor Martian time systems that I have seen, is that they are not physical - they bear no relation to the Martian seasons or to the timekeeping needs of Mars surface navigation."/>
+    <meta property="og:description" content="Mars needs a calendar - using Earth dates just won't do. If I tell you it is February 1, you know that it is freezing in Minneapolis and high summer in Sydney, but what does it tell you about conditions on Mars?"/>
     <meta property="og:url" content="http://www.acalendarformars.com/"/>
     <!-- end open graph tags -->
 
