--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -8,6 +8,9 @@
     <meta name="keywords" content="Mars,Zubrin,Calendar,Mars Society,Space,NASA">
     <meta name="author" content="Jeff Roche">
 
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
     <title>A Calendar for Mars</title>
 
     <!-- open graph tags facebook-->
