--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -13,25 +13,9 @@
 
     <title>A Calendar for Mars</title>
 
-    <!-- open graph tags facebook-->
-    <meta property="og:title" content="A Calendar For Mars" />
-    <meta property="og:site_name" content="ACalendarForMars.com"/>
-     <meta property="fb:app_id" content="966698506728292"/>
-    <meta property="og:type" content="article"/>
-    <meta property="article:author" content="https://www.facebook.com/robert.zubrin.1" />
-    <meta property="article:publisher" content="https://www.facebook.com/NSS" />
-    <meta property="og:image" content="http://i920.photobucket.com/albums/ad46/jkeauctions/a-Mission-to-Mars-Pic-06_zps5cfsl7wa.jpg"/>
-    <meta property="og:description" content="Mars needs a calendar - using Earth dates just won't do. If I tell you it is February 1, you know that it is freezing in Minneapolis and high summer in Sydney, but what does it tell you about conditions on Mars?"/>
-    <meta property="og:url" content="http://www.acalendarformars.com/"/>
-    <!-- end open graph tags -->
+    {% include "facebook_open_graph.html" %}
 
-    <!-- twitter card tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@pokeyjoey">
-    <meta name="twitter:title" content="A Calendar for Mars">
-    <meta name="twitter:description" content="Mars needs a calendar - using Earth dates just won't do. If I tell you it is February 1, you know that it is freezing in Minneapolis and high summer in Sydney, but what does it tell you about conditions on Mars?">
-    <meta name="twitter:image" content="http://i920.photobucket.com/albums/ad46/jkeauctions/a-Mission-to-Mars-Pic-06_zps5cfsl7wa.jpg">
-    <!-- end twitter card tags -->
+    {% include "twitter_card_tags.html" %}
 
     <!-- Bootstrap core CSS -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
@@ -120,15 +104,7 @@
     <!-- create the backbone app -->
     <script data-main="static/js/main" src="static/js/lib/require.js"></script>
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-62932613-1', 'auto');
-      ga('send', 'pageview');
-    </script>
+    {% include "google_analytics.html" %}
 
   </body>
 </html>
