Pointing to the built version of main.css

--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -98,7 +98,7 @@
     <!-- create the backbone app -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="/static/css/main.css" rel="stylesheet">
+    <link href="/static/built/css/main.css" rel="stylesheet">
     <script data-main="static/built/js/main" src="static/js/lib/require-min.js"></script>
 
     {% include "google_analytics.html" %}
