--- a/app/static/built/css/main.css
+++ b/app/static/built/css/main.css
@@ -1,1 +1,1 @@
-@import url('/static/bootstrap/css/bootstrap.min.css');@import url('/static/bootstrap/css/bootstrap-theme.min.css');@import url('/static/built/css/theme.css');@import url('/static/built/css/sticky-footer-navbar.css');
+@import url('/static/built/css/theme.css');@import url('/static/built/css/sticky-footer-navbar.css');
