Test of setting template in python first to see impact on google page speed.

--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -65,6 +65,7 @@
 
         <!-- Backbone.js Article Views are displayed here -->
         <div id="article">
+            {% include "calendar_index_backbone.html" %}
         </div>
         <!-- Backbone.js Article Views are displayed here -->
 
