Remove hacks for page speed experimentation by including calendar_base.html directly for above the fold content.

--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -39,7 +39,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li id="calendar" class="active"><a href="#calendar">Mars needs a Calendar</a><li>
+                <li id="calendar"><a href="#calendar">Mars needs a Calendar</a><li>
                 <li id="calculate"><a href="#calculate">Calculating a Martian Date</a></li>
                 <li id="history"><a href="#history">Great Dates in Martian History</a></li>
                 <li id="areogator"><a href="#areogator">The Mars Areogator</a></li>
@@ -65,7 +65,6 @@
 
         <!-- Backbone.js Article Views are displayed here -->
         <div id="article">
-            {% include "calendar_index_backbone.html" %}
         </div>
         <!-- Backbone.js Article Views are displayed here -->
 
