--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
-        {% include "css/critical.css" %}
-    </style>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="/static/built/css/main.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,7 +46,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mars Links<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="http://en.wikipedia.org/wiki/Timekeeping_on_Mars/">Wikipedia - Timekeeping on Mars</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Timekeeping_on_Mars">Wikipedia - Timekeeping on Mars</a></li>
                     <li><a href="http://www.giss.nasa.gov/tools/mars24/">NASA - Mars24 Sunclock : Time on Mars</a></li>
                     <li><a href="http://www.giss.nasa.gov/tools/mars24/help/algorithm.html/">NASA - Mars Time Keeping Algorithms</a></li>
                     <li><a href="http://www.erbzine.com/mag16/1630.html">Marking Time on Burroughs' Barsoom</a></li>
@@ -96,9 +96,6 @@
     <!-- Backbone Templates -->
 
     <!-- create the backbone app -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="/static/built/css/main.css" rel="stylesheet">
     <script data-main="static/built/js/main" src="static/js/lib/require-min.js"></script>
 
     {% include "google_analytics.html" %}
