Updated a bad link to NASA Marstime Algorithms page.

--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -48,7 +48,7 @@
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="https://en.wikipedia.org/wiki/Timekeeping_on_Mars">Wikipedia - Timekeeping on Mars</a></li>
                     <li><a href="http://www.giss.nasa.gov/tools/mars24/">NASA - Mars24 Sunclock : Time on Mars</a></li>
-                    <li><a href="http://www.giss.nasa.gov/tools/mars24/help/algorithm.html/">NASA - Mars Time Keeping Algorithms</a></li>
+                    <li><a href="http://www.giss.nasa.gov/tools/mars24/help/algorithm.html">NASA - Mars Time Keeping Algorithms</a></li>
                     <li><a href="http://www.erbzine.com/mag16/1630.html">Marking Time on Burroughs' Barsoom</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Martian Exploration and Settlement</li>
