Added script tag for requirejs when not built to base template.

--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -97,6 +97,7 @@
 
     <!-- create the backbone app -->
     <script data-main="static/built/js/main" src="static/js/lib/require-min.js"></script>
+    <!-- <script data-main="static/js/main" src="static/js/lib/require.js"></script> -->
 
     {% include "google_analytics.html" %}
 
