Updates for images hosted on google photo

--- a/app/templates/calendar_areogator_backbone.html
+++ b/app/templates/calendar_areogator_backbone.html
@@ -4,7 +4,11 @@
     <h4>You don't need a sixth sense to determine where Mars is at any given time - just six cents, if you use the areogator.</h4>
     
     <div class="thumbnail">
-        <img src="http://i920.photobucket.com/albums/ad46/jkeauctions/marstime/areogator_zpsirbhlo04.gif" class="img-responsive">
+        <img src="https://lh3.googleusercontent.com/iwAE3OngQ0iNRIRS818E3OirAEQTp9mL2lsXQHxn7XQAQQiCZHD4OREjIRh8ugBP5tH4Z-K6wnoI_v7lvTuhNtAfBX005J1_wLjuL7ehWSjmi4lOBAYFJB-NEWRsGdtd0fbFw6NN08w" class="img-responsive">
+    </div>
+
+        
+        " class="img-responsive">
     </div>
 
     <P><BR>Lets say you want to know the position of Mars during a given year, 1993 
