--- a/app/templates/calendar_base.html
+++ b/app/templates/calendar_base.html
@@ -17,8 +17,8 @@
 
     {% include "twitter_card_tags.html" %}
 
-    <link rel="icon" type="image/png" href="http://i920.photobucket.com/albums/ad46/jkeauctions/favicon-32x32_zpsdtmdrxpc.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="http://i920.photobucket.com/albums/ad46/jkeauctions/favicon-16x16_zpsfytvero7.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="https://gp3.googleusercontent.com/YRv4q76kbDpiQQrI9_7qdGpctf9cm-cM5evjfU6h2dI2E2lNQt5Xl_E9y-G_oxFt3C14q6erNqjsIv_RdlscpU1nC0NuMMtqIJhpyh54keUEfElJimPfXAG3qgK9E-tM-xMLZKf9u0o=s32-p-k" sizes="32x32" />
+    <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/oQNqxAVpNiCYfxQXAokEhKf0hUkZW0QqskrU1_vdgBHAKvsAMtSqg0XUruoUeT0HGox1iNmTbTiPK2Z1uBAgnv4MqgNcc9XzUnMtxfIJJ-XEwqRuDTHGsOsM7FNW_Qh1VTadVU0FY8M=s16-p-k" sizes="16x16" />
 
   </head>
 
