--- a/app/templates/facebook_open_graph.html
+++ b/app/templates/facebook_open_graph.html
@@ -5,7 +5,7 @@
     <meta property="og:type" content="article"/>
     <meta property="article:author" content="https://www.facebook.com/robert.zubrin.1" />
     <meta property="article:publisher" content="https://www.facebook.com/NSS" />
-    <meta property="og:image" content="http://i920.photobucket.com/albums/ad46/jkeauctions/a-Mission-to-Mars-Pic-06_zps5cfsl7wa.jpg"/>
+    <meta property="og:image" content="https://lh3.googleusercontent.com/pLTaqBIEGq64vcwv_SViIrkaZ9QPU8n8CKlP8sTo_wr4qBsj6lcf-jDDrsPaJBQtsebtodD0tB0q26vCrac6Q5tAsyzXaKC5P5IRim_bPlDRiqx3F7d-D2-QK_1iZ2f49Kq8G9-4YzM"/>
     <meta property="og:description" content="Mars needs a calendar - using Earth dates just won't do. If I tell you it is February 1, you know that it is freezing in Minneapolis and high summer in Sydney, but what does it tell you about conditions on Mars?"/>
     <meta property="og:url" content="http://www.acalendarformars.com/"/>
     <!-- end open graph tags -->
